# coral-arches

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .prettierrc  CHANGELOG_sprint_31.md  CHANGELOG_sprint_31_1.md  CHANGELOG_sprint_32.md  CHANGELOG_sprint_33.md  CHANGELOG_sprint_34.md  CHANGELOG_sprint_35.md  CHANGELOG_sprint_36.md  CHANGELOG_test_branch.md  CHANGELOG_uat-security-fixes.md  C_Letters_Licence.xml  Dockerfile  Dockerfile.postgres  Dockerfile.static  Dockerfile.static-py  Dockerfile.static-py.local  Dockerfile.static.local  Letters_Licence.xml  Makefile  README.md  README.txt  README.versioning.md  REAME.git.md  TODO  backup_Consultation.json  build_docker.sh  cli_util.sh  cypress.config.js  cypress.json  docker-compose-static-build.yml  docker-compose-static.yml  docker-compose.yml  entrypoint.sh  gettext.config.js  install_reference_data.bash  (+12 more)
.github/: pull_request_template.md
.github/actions/: scan-package.yml
benchmark/: setup.md
changelogs/: .md  sprint_30.md  sprint_31.md  test_branch.md
coral/: .gitignore  Group_Permission_2025-04-07.json  HA.json  Makefile  Ranger Inspection Report.json  asgi.py  dashboard_consultations.json  package.json  requirements.txt  settings.py  settings_local.py  stale_staging_activity.json  tasks.py  urls.py  wkrm.toml  wsgi.py
docker/: env_file.env
scripts/: Dask.ipynb  Graph.ipynb  build_docker.sh  build_project.sh  build_static.sh  dockerexec.sh  generate_new_workflow.py  json-uuid-replace.py  refresh_plugins_widgets.py  reset_db.sh  start.sh
tests/: README.md  test_settings.py
(+1089 files in other folders)
